--- a/client/src/components/LeftBar/leftbar.scss
+++ b/client/src/components/LeftBar/leftbar.scss
@@ -1,69 +1,73 @@
 @import "../../style.scss";
 
 .leftBar {
-    @include themify($themes) {
-        flex: 2;
-        position: sticky;
-        top: 70px;
-        height: calc(100vh - 70px);
-        overflow: scroll;
-        background-color: themed("bg");
-        color: themed("textColor");
+   @include themify($themes) {
+      flex: 2;
+      position: sticky;
+      top: 70px;
+      height: calc(100vh - 70px);
+      overflow: scroll;
+      background-color: themed("bg");
+      color: themed("textColor");
 
-        &::-webkit-scrollbar {
-            display: none;
-        }
+      @include mobile {
+         display: none;
+      }
 
-        .container {
-            padding: 20px;
+      &::-webkit-scrollbar {
+         display: none;
+      }
 
-            hr {
-                margin: 20px 0px;
-                border: none;
-                height: 0.5px;
-                background-color: themed("border");
+      .container {
+         padding: 20px;
+
+         hr {
+            margin: 20px 0px;
+            border: none;
+            height: 0.5px;
+            background-color: themed("border");
+         }
+
+         .menu {
+            display: flex;
+            flex-direction: column;
+            gap: 20px;
+
+            span {
+               font-size: 12px;
             }
 
-            .menu {
-                display: flex;
-                flex-direction: column;
-                gap: 20px;
+            .user {
+               display: flex;
+               align-items: center;
+               gap: 10px;
 
-                span {
-                    font-size: 12px;
-                }
+               img {
+                  width: 30px;
+                  height: 30px;
+                  border-radius: 50%;
+                  object-fit: cover;
+               }
 
-                .user {
-                    display: flex;
-                    align-items: center;
-                    gap: 10px;
-
-                    img {
-                        width: 30px;
-                        height: 30px;
-                        border-radius: 50%;
-                        object-fit: cover;
-                    }
-
-                    span {
-                        font-size: 14px;
-                    }
-                }
+               span {
+                  font-size: 14px;
+               }
             }
 
             .item {
-                display: flex;
-                align-items: center;
-                gap: 10px;
+               display: flex;
+               align-items: center;
+               gap: 10px;
 
-                img {
-                    width: 30px;
-                    height: 30px;
-                }
-                span {
-                    font-size: 14px;
-                }
+               img {
+                  width: 30px;
+               }
+
+               span {
+                  font-size: 14px;
+               }
             }
-        }
-    }
+         }
+      }
+   }
 }
